--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -87,20 +87,20 @@ jobs:
 
             # Create a new .env file with the secrets
             cat << EOF > .env
-            AIRFLOW_IMAGE_NAME=${AIRFLOW_IMAGE_NAME}
-            AIRFLOW_UID=${AIRFLOW_UID}
-            AIRFLOW_PROJ_DIR=${AIRFLOW_PROJ_DIR}
-            _AIRFLOW_WWW_USER_USERNAME=${_AIRFLOW_WWW_USER_USERNAME}
-            _AIRFLOW_WWW_USER_PASSWORD=${_AIRFLOW_WWW_USER_PASSWORD}
-            MODELS_DIR=${MODELS_DIR}
-            OPENAI_API_KEY=${OPENAI_API_KEY}
+            AIRFLOW_IMAGE_NAME=${{ secrets.AIRFLOW_IMAGE_NAME }}
+            AIRFLOW_UID=${{ secrets.AIRFLOW_UID }}
+            AIRFLOW_PROJ_DIR=${{ secrets.AIRFLOW_PROJ_DIR }}
+            _AIRFLOW_WWW_USER_USERNAME=${{ secrets._AIRFLOW_WWW_USER_USERNAME }}
+            _AIRFLOW_WWW_USER_PASSWORD=${{ secrets._AIRFLOW_WWW_USER_PASSWORD }}
+            MODELS_DIR=${{ secrets.MODELS_DIR }}
+            OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
             EOF
 
             # Fetch the latest changes
             git pull origin release && git switch release
 
             # Create Airflow logs directory
-            mkdir -p ${AIRFLOW_PROJ_DIR}/logs
+            mkdir -p ${{ secrets.AIRFLOW_PROJ_DIR }}/logs
 
             # Install Docker Compose if not already installed
             if ! docker-compose --version > /dev/null 2>&1; then
