--- a/docker-compose.deploy.yaml
+++ b/docker-compose.deploy.yaml
@@ -50,8 +50,8 @@ x-airflow-common:
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
   # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.10.0}
-  image: lhernandez0/clio-airflow-common:latest
-  platform: linux/amd64
+  image: lhernandez0/clio-airflow-common:arm64
+  platform: linux/arm64
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -327,7 +327,7 @@ services:
     restart: always
 
   clio_webserver:
-    image: lhernandez0/clio-webserver
+    image: lhernandez0/clio-webserver:arm64
     ports:
       - "8001:8000"
     environment:
