--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,12 +1,15 @@
-name: CI/CD Pipeline
+name: Release Pipeline
 
 on:
   push:
     branches:
       - release
+  pull_request:
+    branches:
+      - release
 
 jobs:
-  build:
+  build_and_test:
     runs-on: [self-hosted, bob-the-builder]
     environment: RELEASE
 
@@ -37,6 +40,20 @@ jobs:
         run: |
           docker images
 
+      # Run tests
+      - name: Run tests
+        run: |
+          # Add your test commands here
+          echo "Running tests..."
+          # Example: docker-compose run --rm app pytest
+
+  push_and_deploy:
+    needs: build_and_test
+    runs-on: [self-hosted, bob-the-builder]
+    environment: RELEASE
+    if: github.event_name == 'push' && github.ref == 'refs/heads/release'
+
+    steps:
       # Push Docker images to Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
@@ -49,12 +66,6 @@ jobs:
           docker push lhernandez0/clio-airflow-common:latest
           docker push lhernandez0/clio-webserver:latest
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment: RELEASE
-
-    steps:
       # Deploy to VPS using SSH
       - name: Deploy to VPS
         uses: appleboy/ssh-action@master
@@ -66,7 +77,7 @@ jobs:
           script: |
             # Use bash explicitly
             bash -c '
-            # Clone the repository if it doesn’t already exist
+            # Clone the repository if it doesn't already exist
             if [ ! -d "clio" ]; then
               git clone https://github.com/lhernandez0/clio.git
             fi
