--- a/.github/workflows/ci-cd_release.yml
+++ b/.github/workflows/ci-cd_release.yml
@@ -25,8 +25,16 @@ jobs:
       # Install Docker Compose
       - name: Install Docker Compose
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep 'tag_name' | cut -d\" -f4)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
+          if docker compose version &> /dev/null; then
+            echo "Docker Compose is available"
+          else
+            echo "Docker Compose not found. Updating Docker."
+            # Update Docker to the latest version that includes `docker compose`
+            sudo apt-get update
+            sudo apt-get remove docker docker-engine docker.io containerd runc
+            curl -fsSL https://get.docker.com -o get-docker.sh
+            sh get-docker.sh
+          fi
 
       # Build the Docker images
       - name: Build Docker image
@@ -109,9 +117,15 @@ jobs:
             mkdir -p "${{ secrets.AIRFLOW_PROJ_DIR }}/logs"
 
             # Install Docker Compose if not already installed
-            if ! command -v docker-compose &> /dev/null; then
-              sudo curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r .tag_name)/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-              sudo chmod +x /usr/bin/docker-compose
+            if docker compose version &> /dev/null; then
+              echo "Docker Compose is available"
+            else
+              echo "Docker Compose not found. Updating Docker."
+              # Update Docker to the latest version that includes `docker compose`
+              sudo apt-get update
+              sudo apt-get remove docker docker-engine docker.io containerd runc
+              curl -fsSL https://get.docker.com -o get-docker.sh
+              sh get-docker.sh
             fi
 
             # Pull the latest Docker images
